--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="styles.css">
     </head>
-    
-    <body>
-        <h1>AluraBook</h1>
 </body>
+<header class="cabeçalho">
+    <span class="cabeçalho__menu-hamburguer"></span>
+    <img src="img/Polygon 1 (Stroke).svg" alt="Polygon AluraBooks">
+    <a href="a"><img src="img/Favoritos.svg" alt="Meus Favoritos"></a>
+    <a href="a"><img src="img/Compras.svg" alt="Carinhos de Compras" ></a>
+    <a href="a"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+
+</header>
   
 </html>=
